--- a/healthy/Site2/Post-Template.css
+++ b/healthy/Site2/Post-Template.css
@@ -4,7 +4,7 @@
 
 .u-section-1 .u-post-details-1 {
   min-height: 375px;
-  margin-top: 60px;
+  margin-top: 5px;
   margin-bottom: -10px;
 }
 
@@ -17,6 +17,7 @@
   margin-top: 0;
   margin-bottom: 0;
   margin-left: 0;
+  border-radius: 6%;
 }
 
 .u-section-1 .u-text-1 {
@@ -26,7 +27,7 @@
 }
 
 .u-section-1 .u-metadata-1 {
-  margin-top: 30px;
+  margin-top: 40px;
   margin-bottom: 0;
   margin-left: 0;
 }
